// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots EmptyState Default 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
  font-weight: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail {
  margin-bottom: 24px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

.c0 > .buttons {
  margin-top: 24px;
}

.c0 > .buttons > * {
  margin: 0 8px;
  display: inline;
}

.c0 > .icon {
  font-size: 72px;
  color: rgba(0,0,0,0.32);
}

<div
  className="c0"
>
  <noscript />
  <div
    className="title c1"
    fontWeight="title"
    size={24}
    type="#2f313a"
  >
    Empty State Title
  </div>
  <div
    className="description c2"
    fontWeight="inherit"
    size={18}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;

exports[`Storyshots EmptyState Long Title, inside a container 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
  font-weight: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail {
  margin-bottom: 24px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

.c0 > .buttons {
  margin-top: 24px;
}

.c0 > .buttons > * {
  margin: 0 8px;
  display: inline;
}

.c0 > .icon {
  font-size: 72px;
  color: rgba(0,0,0,0.32);
}

<div
  style={
    Object {
      "padding": "52px 0",
      "width": 560,
    }
  }
>
  <div
    className="c0"
  >
    <noscript />
    <div
      className="title c1"
      fontWeight="title"
      size={24}
      type="#2f313a"
    >
      Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
    </div>
    <div
      className="description c2"
      fontWeight="inherit"
      size={18}
      type="#59636f"
    >
      Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
    </div>
  </div>
</div>
`;

exports[`Storyshots EmptyState With icon 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
  font-weight: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail {
  margin-bottom: 24px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

.c0 > .buttons {
  margin-top: 24px;
}

.c0 > .buttons > * {
  margin: 0 8px;
  display: inline;
}

.c0 > .icon {
  font-size: 72px;
  color: rgba(0,0,0,0.32);
}

<div
  className="c0"
>
  <div
    className="icon"
  >
    <i
      className="wg-order"
    />
  </div>
  <div
    className="title c1"
    fontWeight="title"
    size={24}
    type="#2f313a"
  >
    Empty State Title
  </div>
  <div
    className="description c2"
    fontWeight="inherit"
    size={18}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;

exports[`Storyshots EmptyState With image 1`] = `
.c2 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
  font-weight: inherit;
}

.c1 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail {
  margin-bottom: 24px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

.c0 > .buttons {
  margin-top: 24px;
}

.c0 > .buttons > * {
  margin: 0 8px;
  display: inline;
}

.c0 > .icon {
  font-size: 72px;
  color: rgba(0,0,0,0.32);
}

<div
  className="c0"
>
  <img
    alt=""
    className="thumbnail c1"
    height={72}
    size={72}
    src="https://picsum.photos/200?image=0"
    width={72}
  />
  <div
    className="title c2"
    fontWeight="title"
    size={24}
    type="#2f313a"
  >
    Empty State Title
  </div>
  <div
    className="description c3"
    fontWeight="inherit"
    size={18}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;

exports[`Storyshots EmptyState With loading action 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c3 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c3:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c3:focus {
  box-shadow: none;
}

.c3:hover .icon,
.c3:focus .icon {
  color: white;
}

.c3 > .icon.left-icon i::before {
  display: inline-block;
  -webkit-animation: spin 1.1s infinite linear;
  animation: spin 1.1s infinite linear;
}

.c3:hover {
  background-color: #2980b9;
}

.c3:focus {
  background-color: #2980b9;
}

.c3:disabled,
.c3:disabled .icon,
.c3:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c3:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c1 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
  font-weight: inherit;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail {
  margin-bottom: 24px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

.c0 > .buttons {
  margin-top: 24px;
}

.c0 > .buttons > * {
  margin: 0 8px;
  display: inline;
}

.c0 > .icon {
  font-size: 72px;
  color: rgba(0,0,0,0.32);
}

<div
  className="c0"
>
  <div
    className="icon"
  >
    <i
      className="wg-alert"
    />
  </div>
  <div
    className="title c1"
    fontWeight="title"
    size={24}
    type="#2f313a"
  >
    Empty State Title
  </div>
  <div
    className="description c2"
    fontWeight="inherit"
    size={18}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
  <div
    className="buttons"
  >
    <button
      className="c3"
      data-testid="empty-state-button-Primary Action"
      disabled={true}
      onClick={[Function]}
      size="MEDIUM"
      type="SECONDARY"
    >
      <div
        className="icon left-icon"
        style={
          Object {
            "marginRight": 10,
          }
        }
      >
        <i
          className="wg-loading"
        />
      </div>
      Primary Action
    </button>
  </div>
</div>
`;

exports[`Storyshots EmptyState With one action 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c4 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c4:focus {
  box-shadow: none;
}

.c4:hover .icon,
.c4:focus .icon {
  color: white;
}

.c4:hover {
  background-color: #2980b9;
}

.c4:focus {
  background-color: #2980b9;
}

.c4:disabled,
.c4:disabled .icon,
.c4:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c4:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
  font-weight: inherit;
}

.c1 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail {
  margin-bottom: 24px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

.c0 > .buttons {
  margin-top: 24px;
}

.c0 > .buttons > * {
  margin: 0 8px;
  display: inline;
}

.c0 > .icon {
  font-size: 72px;
  color: rgba(0,0,0,0.32);
}

<div
  className="c0"
>
  <img
    alt=""
    className="thumbnail c1"
    height={72}
    size={72}
    src="https://picsum.photos/200?image=0"
    width={72}
  />
  <div
    className="title c2"
    fontWeight="title"
    size={24}
    type="#2f313a"
  >
    Empty State Title
  </div>
  <div
    className="description c3"
    fontWeight="inherit"
    size={18}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
  <div
    className="buttons"
  >
    <button
      className="c4"
      data-testid="empty-state-button-Primary Action"
      onClick={[Function]}
      size="MEDIUM"
      type="SECONDARY"
    >
      Primary Action
    </button>
  </div>
</div>
`;

exports[`Storyshots EmptyState With one action and info 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c4 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c4:focus {
  box-shadow: none;
}

.c4:hover .icon,
.c4:focus .icon {
  color: white;
}

.c4:hover {
  background-color: #2980b9;
}

.c4:focus {
  background-color: #2980b9;
}

.c4:disabled,
.c4:disabled .icon,
.c4:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c4:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
  font-weight: inherit;
}

.c5 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
  font-weight: inherit;
}

.c1 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail {
  margin-bottom: 24px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

.c0 > .buttons {
  margin-top: 24px;
}

.c0 > .buttons > * {
  margin: 0 8px;
  display: inline;
}

.c0 > .icon {
  font-size: 72px;
  color: rgba(0,0,0,0.32);
}

<div
  className="c0"
>
  <img
    alt=""
    className="thumbnail c1"
    height={72}
    size={72}
    src="https://picsum.photos/200?image=0"
    width={72}
  />
  <div
    className="title c2"
    fontWeight="title"
    size={24}
    type="#2f313a"
  >
    Empty State Title
  </div>
  <div
    className="description c3"
    fontWeight="inherit"
    size={18}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
  <div
    className="buttons"
  >
    <button
      className="c4"
      data-testid="empty-state-button-Primary Action"
      onClick={[Function]}
      size="MEDIUM"
      type="SECONDARY"
    >
      Primary Action
    </button>
  </div>
  <div
    className="info c5"
    fontWeight="inherit"
    size={14}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;

exports[`Storyshots EmptyState With one action, inside a container 1`] = `
.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c4 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c4:focus {
  box-shadow: none;
}

.c4:hover .icon,
.c4:focus .icon {
  color: white;
}

.c4:hover {
  background-color: #2980b9;
}

.c4:focus {
  background-color: #2980b9;
}

.c4:disabled,
.c4:disabled .icon,
.c4:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c4:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
  font-weight: inherit;
}

.c1 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail {
  margin-bottom: 24px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

.c0 > .buttons {
  margin-top: 24px;
}

.c0 > .buttons > * {
  margin: 0 8px;
  display: inline;
}

.c0 > .icon {
  font-size: 72px;
  color: rgba(0,0,0,0.32);
}

<div
  style={
    Object {
      "padding": "52px 0",
      "width": 560,
    }
  }
>
  <div
    className="c0"
  >
    <img
      alt=""
      className="thumbnail c1"
      height={72}
      size={72}
      src="https://picsum.photos/200?image=0"
      width={72}
    />
    <div
      className="title c2"
      fontWeight="title"
      size={24}
      type="#2f313a"
    >
      Empty State Title
    </div>
    <div
      className="description c3"
      fontWeight="inherit"
      size={18}
      type="#59636f"
    >
      Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
    </div>
    <div
      className="buttons"
    >
      <button
        className="c4"
        data-testid="empty-state-button-Primary Action"
        onClick={[Function]}
        size="MEDIUM"
        type="SECONDARY"
      >
        Primary Action
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots EmptyState With two actions 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c5 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c5:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c5:focus {
  box-shadow: none;
}

.c5:hover .icon,
.c5:focus .icon {
  color: white;
}

.c5:hover {
  background-color: #2980b9;
}

.c5:focus {
  background-color: #2980b9;
}

.c5:disabled,
.c5:disabled .icon,
.c5:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c5:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #59636f;
  padding: 0 16px;
}

.c4 .icon {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
}

.c4:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c4:focus {
  box-shadow: none;
}

.c4:hover .icon,
.c4:focus .icon {
  color: white;
}

.c4 > .icon {
  color: rgba(0,0,0,0.32);
}

.c4:hover,
.c4:focus {
  color: #3498db;
  border-color: #3498db;
}

.c4:hover > .icon,
.c4:focus > .icon {
  color: #3498db;
}

.c4:disabled,
.c4:disabled .icon,
.c4:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c4:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
  font-weight: inherit;
}

.c1 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail {
  margin-bottom: 24px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

.c0 > .buttons {
  margin-top: 24px;
}

.c0 > .buttons > * {
  margin: 0 8px;
  display: inline;
}

.c0 > .icon {
  font-size: 72px;
  color: rgba(0,0,0,0.32);
}

<div
  className="c0"
>
  <img
    alt=""
    className="thumbnail c1"
    height={72}
    size={72}
    src="https://picsum.photos/200?image=0"
    width={72}
  />
  <div
    className="title c2"
    fontWeight="title"
    size={24}
    type="#2f313a"
  >
    Empty State Title
  </div>
  <div
    className="description c3"
    fontWeight="inherit"
    size={18}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
  <div
    className="buttons"
  >
    <button
      className="c4"
      data-testid="empty-state-button-Secondary Action"
      onClick={[Function]}
      size="MEDIUM"
      type="NEUTRAL"
    >
      Secondary Action
    </button>
    <button
      className="c5"
      data-testid="empty-state-button-Primary Action"
      onClick={[Function]}
      size="MEDIUM"
      type="SECONDARY"
    >
      Primary Action
    </button>
  </div>
</div>
`;

exports[`Storyshots EmptyState extended style 1`] = `
.c2 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
  font-weight: inherit;
}

.c4 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
  font-weight: inherit;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 > .thumbnail {
  margin-bottom: 24px;
}

.c1 > .description,
.c1 > .info {
  margin-top: 16px;
}

.c1 > .buttons {
  margin-top: 24px;
}

.c1 > .buttons > * {
  margin: 0 8px;
  display: inline;
}

.c1 > .icon {
  font-size: 72px;
  color: rgba(0,0,0,0.32);
}

.c0 {
  border: solid 3px lightsalmon;
}

.c0 .icon {
  font-size: 16px;
  color: olive;
}

.c0 .title {
  font-family: fantasy;
}

.c0 .description {
  font-family: serif;
}

.c0 .info {
  font-family: monospace;
}

<div
  className="c0 c1"
>
  <div
    className="icon"
  >
    <i
      className="wg-order"
    />
  </div>
  <div
    className="title c2"
    fontWeight="title"
    size={24}
    type="#2f313a"
  >
    Empty State Title
  </div>
  <div
    className="description c3"
    fontWeight="inherit"
    size={18}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
  <div
    className="info c4"
    fontWeight="inherit"
    size={14}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;
